--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -136,3 +136,32 @@ ul.navbar-nav li a:hover {
     border-radius: 5px;
     box-shadow: 0px 50px 50px 50px rgba(0, 0, 0, 0.2);
 }
+
+/* FOOTER */
+footer {
+    background-color: var(--primary-color);
+    color: var(--quaternary-color);;
+    padding: 3em 5em;
+    display: flex;
+    flex-direction: column;   
+}
+footer h2 {
+    font-weight: lighter;
+    font-size: 2.5rem;
+    margin-bottom: 0.5em;
+}
+footer h5 {
+    font-weight: lighter;
+    font-size: 1.7rem;
+}
+footer p {
+    line-height: 0.5em;
+}
+footer div {
+    padding-bottom: 1.5em;
+}
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    padding-right: 15em;
+}
