--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -165,3 +165,22 @@ footer div {
     justify-content: space-between;
     padding-right: 15em;
 }
+
+
+/* PAGINA CONTACTO */
+.contact-container {
+    padding: 4em 10em;
+}
+.contact-container h2 {
+    font-weight: lighter;
+    font-size: 2.5rem;
+}
+.contact-container h4 {
+    font-weight: lighter;
+    font-size: 2rem;
+}
+
+.contact-container p {
+    line-height: 1.5em;
+    font-size: 1.5rem;
+}
