--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -184,3 +184,48 @@ footer div {
     line-height: 1.5em;
     font-size: 1.5rem;
 }
+
+/* PAGINA NOSOTROS */
+.nosotros-container h2 {
+    font-weight: lighter;
+    font-size: 2.5rem;
+}
+.nosotros-container p {
+    line-height: 1.5em;
+    font-size: 1.3rem;
+    font-weight: lighter;
+    padding-bottom: 1em;
+}
+.historia-container {
+    padding-bottom: 5em;
+}
+.mision-vision-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 5em;
+}
+.mision, .vision {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 0 2em;
+}
+.valores-card-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3em;
+    padding-bottom: 5em;
+}
+.valores-card-container img {
+    width: 50%;
+    height: auto;
+}
+.valores-card {
+    display: flex;
+    align-items: center;
+}
