--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -17,8 +17,9 @@ html, body{
     font-family: "Afacad", sans-serif!important;
 }
 
+
 .font-larger {
-    font-size: 30px;
+    font-size: 35px;
 }
 
 /* ESTILOS NAVBAR */
@@ -236,5 +237,37 @@ footer div {
 
 
 
-/* PRODUCTOS */
+/* VENTANAS  Y  ABERTURAS  */
+.product-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    margin: 0 auto;
+}
+.product-card {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 2em;
+    width: 100%;
+    margin-bottom: 4em;
+}
+.product-image-container {
+    width: 30%;
+}
+.product-image {
+    object-fit: cover;
+    width: 100%;
+    height: 300px; 
+    border-radius: 10px;
+}
 
+.product-card > div:nth-child(2) {
+    width: 70%;
+    word-wrap: break-word; /* Agrega un estilo para que el texto se ajuste al ancho del contenedor */
+}
+.btn-green a {
+    text-decoration: none;
+    color: black;
+}
